# auth-test

./: .gitignore  README.md  pyproject.toml
API TEST/API test/: Login.bru  OTP Request.bru  OTP Verify.bru  Set Password.bru  Update and Get profile.bru
config/: urls.py
config/settings/: base.py  development.py  production.py
core/: managers.py  models.py  serializers.py  urls.py  validators.py  views.py
