[tool.poetry]
name = "ubaar"
version = "0.1.0"
description = ""
authors = ["ahMAD ASSadi <ds1380ahmad@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2"
djangorestframework = "^3.16.0"
markdown = "^3.8"
environ = "^1.0"
django-environ = "^0.12.0"
djangorestframework-simplejwt = "^5.5.0"
django-ratelimit = "^4.1.0"
drf-spectacular = "^0.28.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
